Added the remaining API commands
