# Application/Server/Commands/HTTP_Command_Handler.py
@@ -2,18 +2,20 @@ from Flask_Wrapper import flask_server
 from flask import jsonify, request
 from Commands.Command_Handler import Command_Handler, Command
 from Device import Device, Group
+import time
 class HTTP_Command_Handler():
     @flask_server.route('/', methods=["GET"])
     def Index():
         if request.method == 'GET':
             return(jsonify({"message":"Server is live!"}))
 
+###################DEVICE#################################
     @flask_server.route('/devices', methods=["GET"])
     def HTTP_List_Devices():
         devices = Command.List()
         return(jsonify(devices))
     
-    @flask_server.route('/devices/<string:device_id>', methods=["GET", "DELETE", "POST"])
+    @flask_server.route('/devices/<string:device_id>', methods=["GET", "DELETE"])
     def HTTP_Device(device_id):
         if request.method == 'GET':
             device = Command.Get_Device_By_ID(device_id)
@@ -22,11 +24,35 @@ class HTTP_Command_Handler():
             device = Device.devices[device_id]
             message = Command.Delete(device)
             return(jsonify(message))
-        elif request.method == 'POST':
-            command = "run " + request.json["command"]
-            device = Device.devices[device_id]
-            return(jsonify(Command.Run(device,command)))
 
+    @flask_server.route('/devices/<string:device_id>/name', methods=["POST"])
+    def HTTP_Device_Name(device_id):
+        if request.method == 'POST':
+            data = request.json
+            name = data["name"]
+            device = Device.devices[device_id]
+            message = Command.Set_Name(device, name)
+            return(jsonify(message))
+
+    @flask_server.route('/devices/<string:device_id>/type', methods=["POST"])
+    def HTTP_Device_Type(device_id):
+        if request.method == 'POST':
+            data = request.json
+            new_type = data["type"]
+            device = Device.devices[device_id]
+            message = Command.Set_Type(device, new_type)
+            return(jsonify(message))
+    
+    @flask_server.route('/devices/<string:device_id>/run', methods=["POST"])
+    def HTTP_Device_Run(device_id):
+        if request.method == 'POST':
+            data = request.json
+            command = "run " + data["command"]
+            device = Device.devices[device_id]
+            message = {"message":Command.Run(device, command)}
+            return(jsonify(message))
+
+##################GROUPS################################
 
     @flask_server.route('/groups', methods=["GET", "POST", "DELETE"])
     def HTTP_Groups():
@@ -35,9 +61,15 @@ class HTTP_Command_Handler():
             return(jsonify(groups))
         elif request.method == "POST":
             data = request.json
-            group_name = data["group name"]
+            group_name = data["group"]
             message = Command.Group_Create(group_name)
-            return message
+            return(jsonify(message))
+        elif request.method == "DELETE":
+            data = request.json
+            group_name = data["group"]
+            message = Command.Group_Delete(group_name)
+            return(jsonify(message))
+
         
 
 
@@ -48,7 +80,10 @@ class HTTP_Command_Handler():
             group = Command.Get_Group_By_Name(group_name)
             return(jsonify(group))
         if request.method == 'DELETE':
-            message = Command.Group_Delete(group_name)
+            data = request.json
+            device = Device.devices[data['id']]
+            group = Group.groups[group_name]
+            message = Command.Group_Remove(group, device)
             return(jsonify(message))
         if request.method == 'POST':
             data = request.json
